@@ -1,18 +1,18 @@
 <?xml version='1.0' standalone='yes'?>
 <extensions>
   <id></id>
-  <version>0.2.2</version>
   <optionsURL>plugins/Groups/settings/basic.html</optionsURL>
+  <name>PLUGIN_GROUPS_NAME</name>
   <module>Plugins::Groups::Plugin</module>
+  <version>0.2.2</version>
+  <type>2</type>
+  <defaultState>enabled</defaultState>
   <creator>philippe_44</creator>
   <email>philippe_44@outlook</email>
   <targetApplication>
-    <id>SqueezeCenter</id>
     <maxVersion>*</maxVersion>
+    <id>SqueezeCenter</id>
     <minVersion>7.7</minVersion>
   </targetApplication>
-  <defaultState>enabled</defaultState>
   <description>PLUGIN_GROUPS_DESC</description>
-  <name>PLUGIN_GROUPS_NAME</name>
-  <type>2</type>
 </extensions>
