@@ -4,14 +4,14 @@
     <title lang="EN">Philippe's Group Players plugin - development</title>
   </details>
   <plugins>
-    <plugin maxTarget="7.*" version="0.2.2" minTarget="7.7" name="Groups">
-      <sha>20433694f4b99cb6c777d6db53f5c4390ac939fd</sha>
-      <title lang="EN">Group Players</title>
-      <desc lang="EN">on-the-fly group creation</desc>
-      <link>http://github.com/philippe44/LMS-Groups</link>
-      <email>philippe_44@outlook.com</email>
+    <plugin name="Groups" minTarget="7.7" maxTarget="7.*" version="0.2.2">
       <url>http://downloads.sourceforge.net/project/lms-groups/dev/Groups-0.2.2.zip</url>
+      <email>philippe_44@outlook.com</email>
+      <link>http://github.com/philippe44/LMS-Groups</link>
+      <sha>a6a7f8d38ce7ae64b6dc250f49349187efb7b118</sha>
+      <title lang="EN">Group Players</title>
       <creator>Philippe</creator>
+      <desc lang="EN">on-the-fly group creation</desc>
     </plugin>
   </plugins>
 </extensions>
