@@ -1,5 +1,7 @@
 0.2.2
  - move back Group Player preferences into plugin prefs
+ - restoreSync parameter was always set at init (issue with toolkit)
+ - restore power on resume when player was powered off after a re-allocation to a permanent playing group
  
 0.2.1
  - virtual queue was not emptied in some corner case, stalling the whole group
